--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ a{
   font-size: 20px;
   color: white;
   margin-bottom: 20px;
+  margin-top: 15px;
 }
 .wecome-banner p {
   font-size: 16px;
@@ -581,6 +582,13 @@ font-size: 10px !important;
   border-radius: 5px;
   width: 100%;
 }
+.sign-in .container .otp-text{
+  text-align: center;
+}
+.sign-in .container .otp-timer{
+  text-align: center;
+  margin-top: 60px;
+}
 .sign-in .container form input::placeholder{
   color: #c3c4ca;
   font-size: 16px;
@@ -593,7 +601,6 @@ font-size: 10px !important;
 .sign-in .container  a{
   color: #005655;
   font-size: 16px;
-  margin-bottom: 64px;
 }
 .sign-in .container form .input{
   background-color: #EDEFF5;
@@ -616,6 +623,7 @@ font-size: 10px !important;
   color: #EDEFF5;
   padding: 15px 10px;
   border-radius: 5px;
+  margin-top: 64px;
   margin-bottom: 34px;
 }
 .sign-in .container .tell{
@@ -623,6 +631,38 @@ font-size: 10px !important;
   gap: 10px;
   justify-content: center;
 }
+/* successful page styling */
+.success-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  padding: 20px;
+}
+.success-body h2{
+  font-weight: 800;
+  font-size: 24px;
+  margin-top: 20px;
+}
+.success-body p{
+  width: 70%;
+  text-align: center;
+  font-size: 16px;
+  color: #72747D;
+}
 
-.sign-in .container 
+.success-body a{
+  background-color: #EDEFF5;
+  display: flex;
+  width: 100%;
+  padding: 15px 25px;
+  text-align: center;
+  justify-content: center;
+  color: #72747D;
+  font-weight: 600;
+  border-radius: 5px;
+  margin-top: 109px;
+}
 /* profile styling */
