--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 body{
   width: 100%;
+  font-family: 'Manrope', sans-serif;
 }
 a{
   text-decoration: none;
@@ -21,7 +22,6 @@ a{
     letter-spacing: 0.002em;
     text-align: left;
 }
-
 .secondary-text {
   color: #72747D !important;
     font-size: 18px;
@@ -30,7 +30,6 @@ a{
     letter-spacing: 0.002em;
     text-align: left;
 }
-
 .color3 {
   background-color: #005655;
 }
@@ -170,6 +169,14 @@ a{
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
+}
+.homepage .header .logo .img{
+  border-radius: 20px;
+}
+.homepage .header .logo h2{
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0 5px;
 }
 .header{
   display: flex;
@@ -666,3 +673,141 @@ font-size: 10px !important;
   margin-top: 109px;
 }
 /* profile styling */
+.profile-header{
+  background: url("./images/Unionbg-art.svg") bottom right no-repeat #005655;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 70px;
+  color: #EDEFF5;
+  gap: 10px;
+}
+.profile-header .avata{
+  border-radius: 50%;
+  background-color: #C9F001;
+  padding: 18px 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.profile-header .avata img{
+  width: 30px;
+}
+.profile-header h3{
+  font-size: 24px;
+  font-weight: 500;
+}
+.profile-header p{
+  font-size: 16px;
+  font-weight: 300;
+}
+.profile-header .switch button{
+  background-color:  rgba(255, 255, 255, 0.15);
+  outline: none;
+  border: none;
+  padding: 10px 26px;
+  border-radius: 25px;
+  color: #EDEFF5;
+  font-size: 16px;
+  font-weight: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+.profile .menu-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 20px;
+  column-gap: 20px;
+  padding: 20px;
+  border-radius: 10px 10px 0 0 ;
+  background-color: #fff;
+  position: relative;
+  top: -10px;
+}
+.edit-profile, .my-business, .other-features, .monitored-products, .StyloVault-Business{
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: last baseline;
+  background-color: rgba(0, 108, 235, 0.05);border: #006CEB80 solid 1px;
+}
+.my-business{
+  border-color: #9A5EE780;
+  background-color: rgba(154, 94, 231, 0.05);
+}
+.monitored-products{
+  border-color: #EF4C4980;
+  background-color: rgba(239, 76, 73, 0.05);
+}
+.StyloVault-Business{
+  border-color: #00C71E80;
+  background-color:  rgba(0, 199, 30, 0.05);
+}
+.other-features{
+  background-color: rgba(114, 116, 125, 0.05);
+  border-color: rgba(114, 116, 125, 0.5);
+}
+
+.menu-grid p{
+  width: 100px;
+  font-size: 16px;
+  font-weight: 530;
+}
+ .left .img{
+  padding: 10px 14px;
+  border-radius: 50%;
+  width: 45px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  object-fit: contain;
+}
+.edit-profile .left .img{
+  background-color: #006CEB1A;
+}
+.monitored-products .left .img{
+  background-color: #EF4C491A;
+}
+.StyloVault-Business .left .img{
+  background-color: #00C71E1A;
+}
+.my-business .left .img{
+  background-color: #9A5EE71A;
+}
+.other-features .left .img{
+  background-color: rgba(114, 116, 125, 0.5);
+}
+.other-features .left .img img{
+  width: 20px;
+  height: 20px;
+}
+.others{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.others .menu-lists{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.others .list{
+  border: rgba(237, 239, 245, 1) solid 1px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  border-radius: 5px;
+}
+.others .list .left{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
