--- a/style.css
+++ b/style.css
@@ -1099,3 +1099,141 @@ textarea{
   color: #005655 !important;
   font-weight: bold;
 }
+.wallet-button{
+  display: flex;
+  gap: 20px;
+}
+.nbtn{
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  border: none;
+  gap: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  width: max-content;
+}
+.plusbtn{
+  background-color: #C9F001;
+  color: #005655;
+}
+.sendbtn{
+  background: none;
+  border: solid 1px ;
+  border-color: #c9f001;
+  color: #c9f001;
+}
+.flex{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #005655;
+}
+.flex a{
+  color: #005655;
+}
+.bold-text{
+  font-size: 24px;
+  font-weight: 800 !important;
+}
+.title-text{
+  color: #005655 ;
+}
+.imgg{
+  display: flex;
+  border-radius: 50%;
+  padding: 12px;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+.background-trend-up {
+  background-color: #E1F8E7;
+}
+.background-trend-down{
+  background-color: #FFEFF1;
+}
+.success{
+  color: #00C71E !important;
+}
+.error{
+  color: #EF4C49 !important;
+}
+.pending{
+  color: #72747D !important;
+}
+.input a{
+  color: rgba(195, 196, 205, 1);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+}
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 100%;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.popup1{
+  height: 90%;
+}
+.popup2{
+  height: 70% !important;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+
+.popup .close:hover {
+  color: #06D85F;
+}
+
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+.popup .menu-lists{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.popup .menu-lists .list{
+  border-bottom: solid 1px rgba(237, 239, 245, 1);
+  padding: 5px;
+}
