--- a/style.css
+++ b/style.css
@@ -1482,7 +1482,7 @@ h1 em{
 .action-menus button{
   outline: none;
   border: none;
-  /* background: none; */
+  background: none;
 }
 .each{
   align-items: center;
@@ -1593,6 +1593,7 @@ h1 em{
   gap: 30px;
   align-items: center;
 }
+.copy-text,
 .inn{
   display: flex;
   align-items: center;
